[package]
name = "stryke-neo4j"
version = "0.1.0"
edition = "2021"
description = "Neo4j graph cdylib for the stryke `neo4j` package — Cypher query/run/params + schema introspection over the Bolt protocol, dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-neo4j"
homepage = "https://menketechnologies.github.io/stryke-neo4j/"
publish = false

[lib]
name = "stryke_neo4j"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# neo4rs is the pure-Rust Bolt driver. It is async, so the cdylib embeds a
# tokio runtime and presents a blocking facade — matching the sync
# connection-cache model the other stryke data packages use.
neo4rs = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
